<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rk_layout"
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/DRINF"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chatfrom_bg_focused"
        android:layout_marginTop="10dp"
        android:text="@string/DRINFsj"
       
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/chatto_bg_focused"
        android:text="@string/zlinf"
        android:textSize="16sp" />

<ImageView
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:src="@drawable/inf" />

</LinearLayout>