<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
       
        android:background="@drawable/title_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/YHDL"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
<ScrollView
   android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
     android:scrollbarStyle="outsideOverlay"
     android:cacheColorHint="#0000" 
    > 
<LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="020-85279260"
        android:textColor="#000"
        android:textSize="20sp" />
    <RelativeLayout
       android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        >
<EditText
        android:id="@+id/login_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="25dp"
        android:background="@drawable/login_editbox"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        
        android:hint="@string/CS"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

<ImageButton
    android:id="@+id/ygImageButton02"
    android:layout_width="30dp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/login_edit"
    android:layout_alignRight="@+id/login_edit"
    android:layout_alignTop="@+id/login_edit"
    android:background="@drawable/more_select" />

</RelativeLayout>
    <EditText
        android:id="@+id/login_passwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="14dp"
        android:background="@drawable/login_editbox"
       
        android:hint="@string/MM"
        android:password="true"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#000"
        android:textSize="15sp" />
<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="15dp"
    >

    <Button
        android:id="@+id/login_return"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/btn_style_green"
        android:onClick="login_mainweixin"
        android:text="@string/FH"
        android:textColor="#ffffff"
        android:textSize="18sp" />
    
     <Button
        android:id="@+id/login_btn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginLeft="65dp"
        android:background="@drawable/btn_style_green"
        android:onClick="login_mainweixin"
        android:text="@string/DL"
        android:textColor="#ffffff"
        android:textSize="18sp" />
    
    
</LinearLayout>
    
</LinearLayout>
</ScrollView>      

</LinearLayout>