<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
 <LinearLayout android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:orientation="vertical"> 
	
    <RelativeLayout
        android:id="@+id/login_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/MMXG"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_below="@+id/login_top" >
       <EditText
        android:id="@+id/jmm"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xmm"
         android:password="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/login_editbox"
        android:ems="10"
       
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" >

    </EditText>

    <Button
        android:id="@+id/mmfh"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/xmm"
        android:layout_below="@+id/xmm"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_style_green"
        android:onClick="login_mainweixin"
        android:text="@string/FH"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/xmm"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/jmm"
        android:layout_marginRight="17dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_editbox"
        android:ems="10"
        android:password="true"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="15sp" >

    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/xmm"
        android:layout_alignBottom="@+id/xmm"
        android:layout_toLeftOf="@+id/xmm"
        android:background="@drawable/btn_style_green"
        android:padding="8dp"
        android:text="@string/xMM"
        android:textColor="#000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/jmm"
        android:layout_alignBottom="@+id/jmm"
        android:layout_toLeftOf="@+id/jmm"
        android:background="@drawable/btn_style_green"
        android:padding="8dp"
        android:text="@string/JMM"
        android:textColor="#000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/mmqd"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/mmfh"
        android:layout_alignBottom="@+id/mmfh"
        android:layout_alignLeft="@+id/textView1"
        android:background="@drawable/btn_style_green"
        android:onClick="login_mainweixin"
        android:text="@string/ZHQD"
        android:textColor="#ffffff"
        android:textSize="18sp" />   
     
     
     
     
 </RelativeLayout>
</LinearLayout>
</ScrollView >